# glass

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md  build.rs
.github/workflows/: release.yml
docs/: protocol_format.ja.md  protocol_format.md
protocols/: sample.toml
src/: app.rs  i18n.rs  logging.rs  main.rs  sender.rs  settings.rs  trigger.rs  util.rs
src/model/: buffer.rs  entry.rs  file_format.rs  grid.rs  mod.rs
src/protocol/: checksum.rs  definition.rs  engine.rs  mod.rs
src/serial/: config.rs  worker.rs
src/ui/: confirm_dialog.rs  dialog.rs  error_dialog.rs  header_bar.rs  japanese_font.rs  menu.rs  mod.rs  monitor_view.rs  protocol_panel.rs  protocol_search.rs  search.rs  search_bar.rs  selection.rs  send_panel.rs  sequence_diagram.rs  settings_window.rs  status_bar.rs  theme.rs  toolbar.rs  trigger_window.rs
src/ui/protocol_panel/: list_view.rs  mod.rs  wrap_view.rs
