[package]
name = "glass"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"
eframe = "0.34.1"
egui = "0.34.1"
egui-phosphor = "0.12"
egui_extras = "0.34.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.9.0"
image = { version = "0.25", default-features = false, features = ["ico"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Devices_Communication",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
] }

[build-dependencies]
winres = "0.1"
